[project]
name = "ErisPulse-MatrixAdapter"
version = "4.0.0"
description = "ErisPulse的Matrix协议适配模块"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [ { name = "wsu2059", email = "wsu2059@qq.com" } ]
dependencies = []

[project.urls]
"homepage" = "https://github.com/ErisPulse/ErisPulse-MatrixAdapter"

[project.entry-points."erispulse.adapter"]
matrix = "MatrixAdapter:MatrixAdapter"

[tool.setuptools.packages.find]
include = [ "MatrixAdapter" ]
